# agent-benchmarks

./: .gitignore  README.md  pyproject.toml
.github/workflows/: benchmark.yml
competitors/agent-browser-mcp/: README.md  server.py
pandascript-vs-cdp/: .gitignore  README.md  RETAIL-INVESTIGATION.md  package-lock.json  package.json
pandascript-vs-cdp/harness/: ab.py  bench.py  browsers.py  har_capture.js  load_semantics_fixture.py  login_fixture.py  memprobe.py  plot.py  report.py
pandascript-vs-cdp/repro-serve-cache/: README.md  run.sh  walk_agent.js  walk_serve.js
pandascript-vs-cdp/results/flag-notes/: news-disable-subframes-ab.txt
pandascript-vs-cdp/results/full-ab-featdetect/: raw.jsonl
pandascript-vs-cdp/results/full-ab-flags/: raw.jsonl
pandascript-vs-cdp/results/full-loginfx-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/full-loginfx-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/full-retail-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/full-retail-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/full-scrape-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/full-scrape-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/full-scrapepar-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/memory/: raw.jsonl
pandascript-vs-cdp/results/memory-heapcap-128/: raw.jsonl
pandascript-vs-cdp/results/memory-heapcap-off/: raw.jsonl
pandascript-vs-cdp/results/memory-retail/: raw.jsonl
pandascript-vs-cdp/results/pub-loginfx-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/pub-loginfx-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/pub-news-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/pub-news-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/pub-retail-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/pub-retail-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/pub-scrape-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/pub-scrape-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/pub-scrapepar-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/stock-loginfx-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/stock-loginfx-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/stock-news-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/stock-news-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/stock-retail-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/stock-retail-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/stock-scrape-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/stock-scrape-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/stock-scrapepar-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-login_fx-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-login_fx-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-login_fx-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-news-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-news-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-news-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-retail-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-retail-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-retail-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-scrape-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-scrape-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-scrape-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-scrape_par-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v2-scrape_par-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-login_fx-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-login_fx-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-login_fx-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-news-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-news-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-news-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-retail-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-retail-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-retail-warm-aborted/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-retail-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-scrape-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-scrape-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-scrape-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-scrape_par-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v3-scrape_par-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-login_fx-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-login_fx-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-login_fx-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-memory/: raw.jsonl
pandascript-vs-cdp/results/v4-news-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-news-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-news-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-retail-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-retail-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-retail-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-scrape-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-scrape-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-scrape-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-scrape_par-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v4-scrape_par-warm/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v5-login_fx-cold/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v5-login_fx-warm-agentcache/: meta.json  raw.jsonl
pandascript-vs-cdp/results/v5-memory/: raw.jsonl
src/agent_benchmarks/: _agent_browser.py  _mcp.py  common.py  llm_judge.py
(+59 files in other folders)
