[project]
name = "agent-benchmarks"
version = "0.1.0"
description = "Benchmark suites for the Lightpanda agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14",
    # Office-doc extraction for GAIA attachments (docx/xlsx/pptx → text).
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6.23",
    # LLM-judge backends for the WebBench grader. The judge dispatches
    # on the --judge-model prefix: claude-* → anthropic, gemini-* → google.
    "anthropic>=0.40",
    "google-genai>=1.0",
]

[project.scripts]
assistantbench-run = "agent_benchmarks.assistantbench.run:main"
assistantbench-grade = "agent_benchmarks.assistantbench.grade:main"
gaia-run = "agent_benchmarks.gaia.run:main"
gaia-grade = "agent_benchmarks.gaia.grade:main"
webbench-run = "agent_benchmarks.webbench.run:main"
webbench-grade = "agent_benchmarks.webbench.grade:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_benchmarks"]

[tool.hatch.build]
# WebBench ships a vendored copy of its upstream dataset so the runner
# has no network dependency.
include = [
    "src/agent_benchmarks/webbench/data/*.jsonl",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Long lines inside SYSTEM_PROMPT literals aren't worth breaking up.
"src/agent_benchmarks/assistantbench/run.py" = ["E501"]
"src/agent_benchmarks/gaia/run.py" = ["E501"]
"src/agent_benchmarks/webbench/run.py" = ["E501"]
"src/agent_benchmarks/llm_judge.py" = ["E501"]
